--- a/style.css
+++ b/style.css
@@ -1,110 +1,128 @@
 body {
     font-family: 'Inter', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     min-height: 100vh;
     color: hsl(0, 0%, 100%);
     background-color: hsl(233, 47%, 7%);
 }
 
-.main {
+.hero {
     display: flex;
-    padding: 15px;
-}
-
-.hero{
-    order: 1;
-}
-
-.img {
-   max-width: 500px;
-   height: 400px;
-   position: absolute;
-   border-radius: 0 15px 15px 0;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 30px;
+    margin-bottom: 0px;
 }
 
 .overlay {
-    position: relative;
+    position: absolute;
     background-color: hsl(277, 64%, 61%);
-    width: 500px;
-    height: 400px;
-    opacity: .7;
-    border-radius: 0 15px 15px 0;
+    width: 100%;
+    height: 100%;
+    opacity: .60;
+    border-radius: 15px 15px 0 0 ;
+    z-index: 888;
+}
+
+.img {
+    width: 100%;
+    border-radius: 15px 15px 0 0 ;
+    z-index: 777;
 }
 
 .card-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color:hsl(244, 38%, 16%);
-    border-radius: 15px 0 0 15px;
-    width: 500px;
-    height: 400px;
-    padding: 0 15px;
+
+    background-color: hsl(244, 38%, 16%);
+    margin: 30px;
+    margin-top: 0px;
+    padding: 30px;
+    border-radius: 0 0 15px 15px;
+    text-align: center;
+    color: hsl(0, 0%, 100%);
+    z-index: 999;
 }
 
 .title {
     font-size: 30px;
-    font-family: 'lexend deca', sans-serif;
     font-weight: 700;
-    color: hsl(0, 0%, 100%);
-
 }
 
 .insigths {
     color: hsl(277, 64%, 61%);
 }
 
-.text{
+.text {
     font-size: 15px;
     font-weight: 400;
-    color: hsla(0, 0%, 100%, 0.75)
-
+    letter-spacing: 1px;
+    line-height: 150%;
+    color: hsla(0, 0%, 100%, 0.75);
+    margin: 30px 0 60px 0;
 }
 
-.stats {
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.stats-num{
-    line-height: 0px;
-    font-size: 30px;
+.stats-num {
+    font-size: 20px;
     font-weight: 700;
-    color: white;
-    
+    color: hsl(0, 0%, 100%);
+    line-height: 0.5;
+
 }
 
 .stats-text {
-    line-height: 0px;
-    color:  hsla(0, 0%, 100%, 0.6);
+
+    color: hsla(0, 0%, 100%, 0.75);
+    text-transform: uppercase;
+    font-size: 10px;
+    line-height: 0.5;
+    margin-bottom: 30px;
 }
 
-footer{
-    margin-top: 15px;
+@media only screen and (min-width: 600px) {
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+        }
+    
+        .main {
+            display: flex;
+            margin-inline: 30px;
+            margin-bottom: 30px;
+        }
+        .hero {
+            order: 1;
+            margin: 0px;
+            padding: 0px;
+        }
+
+        .img{
+            border-radius: 0 15px 15px 0;
+            margin: 0;
+            padding: 0;
+            object-fit: cover;
+        
+        }
+
+        .overlay {
+            border-radius: 0 15px 15px 0;
+            margin: 0;
+            padding: 0;
+        }
+
+        .stats {
+            display: flex;
+            justify-content: space-between;
+            margin-right: 60px;
+        }
+
+        .card-text {
+            margin: 0;
+            padding: 60px;
+            border-radius: 15px 0 0 15px;
+            max-width: 600px;
+            text-align: left;
+        }
 }
-
-@media only screen and (max-width: 600px) {
-
-    .main {
-        flex-direction: column;
-    }
-
-    .hero {
-
-         order: o;
-    }
-
-    .img {
-        width: 100%;
-    }
-
-    .overlay {
-        width: 100%;
-    }
-
-
-  }
