--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body {
     background-color: hsl(233, 47%, 7%);
 }
 
+.hero-picture {
+    height: 100%;
+}
+
 .hero {
     display: flex;
     justify-content: center;
@@ -26,8 +30,11 @@ body {
 
 .img {
     width: 100%;
+    height: 100%;
     border-radius: 15px 15px 0 0 ;
     z-index: 777;
+    object-fit: cover;
+    position: relative;
 }
 
 .card-text {
@@ -102,8 +109,6 @@ body {
             border-radius: 0 15px 15px 0;
             margin: 0;
             padding: 0;
-            object-fit: cover;
-        
         }
 
         .overlay {
